<resources>
    <string name="app_name">Food Delivery</string>
    <string name="waves_of_food">Waves of food</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="design_by_neatroots">Design By \nNeatRoots</string>
    <string name="enjoy_restaurant_quality_meals_at_home">
        Enjoy Restaurant Quality Meals \nat Home
    </string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="logo">Logo</string>
    <string name="burger">burger</string>
    <string name="name">Name</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="location_warning">To provide you with the best dining experience,
        we need your permission to access your device\'s location.
        By enabling location services, we can offer personalized restaurant recommendations,
        accurate delivery estimates, and ensure a seamless food delivery experience
    </string>
    <string name="warning_selected_country">Do you want to continue with this selected country?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bells">bells</string>
    <string name="banner">banner</string>
</resources>