<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpUserActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/waves_of_food"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="@font/yeonsung"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_here"
        android:textSize="20sp"
        android:fontFamily="@font/yeonsung"
        android:textColor="@color/startGreenColor"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/sign_up_username"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="15dp"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/name"
        android:inputType="text"
        android:outlineSpotShadowColor="@color/startGreenColor"
        android:paddingStart="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="15dp"
        android:fontFamily="sans-serif-medium"
        android:elevation="2dp"
        android:inputType="textEmailAddress"
        android:outlineSpotShadowColor="@color/startGreenColor"
        android:hint="@string/email_or_phone_number"
        android:paddingStart="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_username" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:fontFamily="sans-serif-medium"
        android:elevation="2dp"
        android:inputType="textPassword"
        android:outlineSpotShadowColor="@color/startGreenColor"
        android:hint="@string/password"
        android:paddingStart="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_password"
        app:layout_constraintStart_toStartOf="@+id/sign_in_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with"
        android:textSize="20sp"
        android:fontFamily="@font/yeonsung"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_shape_lg"
        android:drawableStart="@drawable/google"
        android:fontFamily="sans-serif-medium"
        android:outlineSpotShadowColor="@color/startGreenColor"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_green_90"
        android:elevation="4dp"
        android:fontFamily="@font/yeonsung"
        android:outlineAmbientShadowColor="@color/startGreenColor"
        android:outlineSpotShadowColor="@color/startGreenColor"
        android:shadowColor="@color/startGreenColor"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/go_login_user_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/already_have_an_account"
        android:textColor="@color/startGreenColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>