<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:elevation="2dp"
    app:cardBackgroundColor="#F1E8E8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:textSize="28sp"
            android:textColor="@color/endGreenColor"
            android:textStyle="bold"
            android:fontFamily="@font/yeonsung" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_selected_country"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:text="@string/yes"
                android:textSize="17sp"
                android:elevation="2dp"
                android:outlineAmbientShadowColor="@color/endGreenColor"
                android:outlineSpotShadowColor="@color/endGreenColor"
                android:fontFamily="@font/yeonsung"
                android:background="@drawable/btn_green_90"
                app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:textSize="17sp"
                android:elevation="2dp"
                android:outlineAmbientShadowColor="@color/endGreenColor"
                android:outlineSpotShadowColor="@color/endGreenColor"
                android:fontFamily="@font/yeonsung"
                android:layout_marginEnd="8dp"
                android:background="@drawable/btn_green_90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </LinearLayout>

</androidx.cardview.widget.CardView>